--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -1,3 +1,23 @@
 // Place all the styles related to the StaticPages controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.item{
+
+    background-image: image-url('cap1.png');
+    background-image: no-repeat ;
+
+    background-attachment: fixed;
+    position: relative;
+    height: 600px;
+    width: 1365px;
+    font-size:1.5em;
+    font-family:Ubuntu;
+    color:gray;
+    .header{
+        text-align:center;
+
+    }
+
+}
+
