--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -10,7 +10,7 @@
     background-attachment: fixed;
     position: relative;
     height: 600px;
-    width: 1365px;
+    width: 1350px;
     font-size:1.5em;
     font-family:Ubuntu;
     color:gray;
@@ -20,4 +20,6 @@
     }
 
 }
-
+h1,h3{
+    text-align:center;
+}
