--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,3 +1,39 @@
 <div class="item">
 </div>
+<h1>About us</h1>
+<hr>
+<div class="row">
+    <div class="medium-4 columns">
+        <h3>Motivation</h3>
+        <p>
+        The current communication between the students and the lecturers in
+        the department is during lectures
+        and also no room for feedback. The other communication through the class
+        representative which is he/she is not available is a disaster.
+        And also the message from the class
+        representative may not reach each and every member of the class in time.
+        </p>
+    </div>
+    <div class="medium-4 columns">
+        <h3>SO??</h3>
+        <p>
+        Shahada aims at solving the communication between the student
+        and the teacher. In doing this the
+        classroom gets adequate learning, assignments are
+        admitted in time, students can ask questions anytime
+        and the maximum is gotten from the unit of interest.
+        In simple terms To improve the teaching mechanism in the department
+        to ensure all the objectives of the unit are delivered as expected.
+        </p>
+    </div>
+    <div class="medium-4 columns">
+        <h3>How? </h3>
+        <p> We provide a communication channel between the students and lecturers 
+        where a student can ask a question and lecturer or a fellow classmate can answer. 
+        The lecturer can also post an assignment in the website and any student in the 
+        that year of study can see it. A lecturer can post concerns, food for thought and 
+        pretty much anything and the students can comment on the same
+        </p>
+        </div>
+</div>
 
