--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,2 +1,4 @@
-<h1>Users#new</h1>
-<p>Find me in app/views/users/new.html.erb</p>
+<%# <h1> Sign up here!!</h1> %>
+<%# <% form_for @user do |f| %1> %>
+<%#     <%= %1> %>
+<%#     <% end %1> %>
