user resources and signup form

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,11 @@
-<%# <h1> Sign up here!!</h1> %>
-<%# <% form_for @user do |f| %1> %>
-<%#     <%= %1> %>
-<%#     <% end %1> %>
+<h1> Sign up here!!</h1>
+<%= form_for(@user) do |f| %>
+    <%= f.text_field :reg_no, placeholder: 'Registration number'  %>
+    <%= f.text_field :f_name, placeholder:'First Name'  %>
+    <%= f.text_field :l_name, placeholder: 'Last Name' %>
+    <%= f.text_field :email,  placeholder: 'Email'  %>
+    <%= f.text_field :phone,  placeholder: 'Phone'  %>
+    <%= f.text_field :school, placeholder: 'School'  %>
+    <%= f.text_field :password, placeholder: 'Password'  %>
+    <%= f.text_field :password, placeholder: 'Confirm Password'  %>
+    <% end %>
