create and show users

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
   <body>
   <%= render 'layouts/nav-bar' %>
     <%= yield %>
-  <%= render 'layouts/footer' %>
+  <%# <%= render 'layouts/footer' %1> %>
 
   </body>
 </html>
