rendering error form messages

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,6 @@
 <h1> Sign up here!!</h1>
 <%= form_for(@user) do |f| %>
+    <%= render 'shared/errors' %>
     <%= f.text_field :reg_no, placeholder: 'Registration number'  %>
     <%= f.text_field :f_name, placeholder:'First Name'  %>
     <%= f.text_field :l_name, placeholder: 'Last Name' %>
