--- a/app/views/shared/_errors.html.erb
+++ b/app/views/shared/_errors.html.erb
@@ -1,6 +1,8 @@
-<% if @user.errors.any? %>
-    <% @user.errors.full_messages.each do |error| %>
-        <li><%= error %></li>
+<div class="errors">
+    <% if @user.errors.any? %>
+        <% @user.errors.full_messages.each do |error| %>
+            <li><%= error %></li>
+        <% end %>
     <% end %>
-    <% end %>
+</div>
 
