edit and update actions

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,5 +1,5 @@
-<h1> Sign up here!!</h1>
+<h2> Edit My Profile </h2>
 <%= form_for(@user) do |f| %>
 <%= render 'shared/signup', f: f %>
-<%= f.submit "Sign Up" %>
+<%= f.submit "Update Info" %>
 <% end %>
