--- a/app/views/layouts/_nav-bar.html.erb
+++ b/app/views/layouts/_nav-bar.html.erb
@@ -4,6 +4,7 @@
         <%= link_to "Contact", "#" %>
     </div>
     <div class="top-bar-left">
-        <%= link_to "Home", root_url %>
+        <%= link_to  image_tag("logo1.png"), root_url%>
+            <h2><%= link_to "Shahada", root_url %></h2>
     </div>
 </div>
