home page content

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,3 +1,31 @@
+<div class="row">
+    <div class="medium-6 columns">
+    <%= image_tag('girl.png')%>
+    </div>
+    <div class="medium-6 columns">
+        <div class="animated rotateIin">
+        <p>
+        <br>
+        If you have ever been a student at any time in your life, I bet  you must have had a moment where
+        you thought "if only i knew there was no class today" or did i hear the representative  say anything the
+        assignment? now am late with it. Definately you must have had one of those days when you are
+        totally into learning a subject(we both know how rare it is to get into a mood like that) and in between your 
+        studies you find a concept you cannot seem to grasp and you have to understand that concept before you move 
+        on to another concept. You try the internet but what you get is a junk of information some talking of 
+        a very different thing from the other and you do not know which is which. The time you wish you could 
+        have a direct channel to communicate to the lecturer to make things clear for you
+        or even ask a question you did not understand before the next class. Or sometimes just ask something
+        so a lecturer or a fellow student can answer and maybe get different opinions.<br>
+        <i>Shahada is to all those times, the times you thought about how the communication channel for learning
+            in the school after classtime is broken.</i>
+        </p>
+    </div>
+    </div>
+    </div>
+    <div class="medium-offset-4">
+    <%=link_to "Sign up as Student", new_user_path , class:"button success round"%> &nbsp; &nbsp; &nbsp;
+    <%=link_to "Sign up as Lecturer", "#" , class:"button"%>
+    </div>
 <h1>About us</h1>
 <hr>
 <div class="row">
