--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -34,9 +34,7 @@
     </div>
     <hr>
 
-    <p class="text-center"> &copy;  Shahada <%= Date.today.year%>
-</p>
+    <p class="text-center"> &copy;  Shahada <%= Date.today.year%></p>
 <p class="text-center">Designed and maintained by Cess</p>
 </div>
-</p>
 </div>
