change nav titles to h5

--- a/app/views/layouts/_nav-bar.html.erb
+++ b/app/views/layouts/_nav-bar.html.erb
@@ -1,7 +1,7 @@
 <div class="top-bar">
     <div class="top-bar-right">
-        <%= link_to "About", "#" %>
-        <%= link_to "Contact", "#" %>
+        <h5> <%= link_to "About", "#" %></h5>
+        <h5><%= link_to "Contact", "#" %></h5>
     </div>
     <div class="top-bar-left">
         <%= link_to  image_tag("logo1.png"), root_url%>
