griding with foundation

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,5 +1,14 @@
+<div class="row">
+    <div class="medium-8 columns">
+        <div class="medium-offset-5">
 <h2> Edit My Profile </h2>
-<%= form_for(@user) do |f| %>
-<%= render 'shared/signup', f: f %>
-<%= f.submit "Update Info" %>
-<% end %>
+<br>
+<br>
+<br>
+            <%= form_for(@user) do |f| %>
+                <%= render 'shared/signup', f: f %>
+                <%= f.submit "Update Info" %>
+            <% end %>
+        </div>
+    </div>
+</div>
