--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,11 @@
 <h1> Sign up here!!</h1>
-<%= form_for(@user) do |f| %>
-<%= render 'shared/signup', f: f %>
-<%= f.submit "Sign Up" %>
-<% end %>
+<div class="row">
+    <div class="medium-8 columns">
+        <div class="medium-offset-5">
+            <%= form_for(@user) do |f| %>
+                <%= render 'shared/signup', f: f %>
+                <%= f.submit "Sign Up", class: "button" %>
+            <% end %>
+        </div>
+    </div>
+</div>
