--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -27,7 +27,7 @@
     <%=link_to "Sign up as Student", new_user_path , class:"button success round"%> &nbsp; &nbsp; &nbsp;
     <%=link_to "Sign up as Lecturer", "#" , class:"button"%>
     </div>
-    <h1>About us</h1>
+    <h1 id="about">About us</h1>
     <hr>
     <div class="row">
         <div class="medium-4 columns" >
