--- a/app/views/layouts/_nav-bar.html.erb
+++ b/app/views/layouts/_nav-bar.html.erb
@@ -1,10 +1,10 @@
 <div class="top-bar">
     <div class="top-bar-right">
-        <h5> <%= link_to "About", "#" %></h5>
-        <h5><%= link_to "Contact", "#" %></h5>
+        <h5> <%= link_to "About", "#about" %></h5>
+        <h5><%= link_to "Contact", "#footer" %></h5>
     </div>
     <div class="top-bar-left">
-        <%= link_to  image_tag("logo1.png"), root_url%>
+        <%# <%= link_to  image_tag("logo1.png"), root_url%> 
             <h2><%= link_to "Shahada", root_url %></h2>
     </div>
 </div>
