--- a/app/views/layouts/_nav-bar.html.erb
+++ b/app/views/layouts/_nav-bar.html.erb
@@ -2,7 +2,11 @@
     <div class="top-bar-right">
         <h5> <%= link_to "About", "#about" %></h5>
         <h5><%= link_to "Contact", "#footer" %></h5>
+        <% if logged_in? %>
+        <h5><%= link_to "Logout", logout_path, method: :delete %></h5>
+            <% else %>
         <h5><%= link_to "Login", login_path %></h5>
+        <% end %>
     </div>
     <div class="top-bar-left">
         <%# <%= link_to  image_tag("logo1.png"), root_url%> 
