--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -26,7 +26,7 @@
     <div class="medium-offset-4">
         <% unless logged_in? %>
     <%=link_to "Sign up as Student", new_user_path , class:"button success round"%> &nbsp; &nbsp; &nbsp;
-    <%=link_to "Sign up as Lecturer", "#" , class:"button"%>
+    <%=link_to "Sign up as Lecturer", lecturers_new_path , class:"button"%>
     <% end %>
     </div>
     <h1 id="about">About us</h1>
