--- a/app/views/shared/_lecturer.html.erb
+++ b/app/views/shared/_lecturer.html.erb
@@ -1,5 +1,5 @@
 <%= render 'shared/errors', object: f.object %>
-    <%= f.text_field :reg_no, placeholder: 'Registration number'  %>
+    <%= f.text_field :id_no, placeholder: 'Id number'  %>
     <%= f.text_field :f_name, placeholder:'First Name'  %>
     <%= f.text_field :l_name, placeholder: 'Last Name' %>
     <%= f.text_field :email,  placeholder: 'Email'  %>
