--- a/app/views/lecturers/edit.html.erb
+++ b/app/views/lecturers/edit.html.erb
@@ -1,4 +1,4 @@
-<h1> Sign up here!!</h1>
+<h1>Edit Profile Information</h1>
 <div class="row">
     <div class="medium-8 columns">
         <div class="medium-offset-5">
@@ -12,7 +12,7 @@
                 <%= f.text_field :school, placeholder: 'School'  %>
                 <%= f.password_field :password, placeholder: 'Password'  %>
                 <%= f.password_field :password_confirmation, placeholder: 'Confirm Password'%>
-                <%= f.submit "Sign Up", class: "button" %>
+                <%= f.submit "Update Informatio", class: "button" %>
             <% end %>
         </div>
     </div>
