allow lecturers to log in through sessions controller :sparkles:

--- a/app/views/lecturers/edit.html.erb
+++ b/app/views/lecturers/edit.html.erb
@@ -12,7 +12,7 @@
                 <%= f.text_field :school, placeholder: 'School'  %>
                 <%= f.password_field :password, placeholder: 'Password'  %>
                 <%= f.password_field :password_confirmation, placeholder: 'Confirm Password'%>
-                <%= f.submit "Update Informatio", class: "button" %>
+                <%= f.submit "Update Information", class: "button" %>
             <% end %>
         </div>
     </div>
