add labels for signup fields

--- a/app/views/shared/_signup.html.erb
+++ b/app/views/shared/_signup.html.erb
@@ -1,9 +1,16 @@
 <%= render 'shared/errors', object: f.object %>
-    <%= f.text_field :reg_no, placeholder: 'Registration number'  %>
-    <%= f.text_field :f_name, placeholder:'First Name'  %>
-    <%= f.text_field :l_name, placeholder: 'Last Name' %>
-    <%= f.text_field :email,  placeholder: 'Email'  %>
-    <%= f.text_field :phone,  placeholder: 'Phone'  %>
-    <%= f.text_field :school, placeholder: 'School'  %>
-    <%= f.password_field :password, placeholder: 'Password'  %>
-    <%= f.password_field :password_confirmation, placeholder: 'Confirm Password'  %>
+<%= f.label :reg_no %>
+<%= f.text_field :reg_no, placeholder: 'MAT/00050/013'  %>
+<%= f.label :first_name%>
+<%= f.text_field :f_name, placeholder:'Mary'  %>
+<%= f.label :last_name%>
+<%= f.text_field :l_name, placeholder: 'Jane' %>
+<%= f.label :email%>
+<%= f.text_field :email,  placeholder: 'mary@gmail.coml'  %>
+<%= f.label :phone%>
+<%= f.text_field :phone,  placeholder: '0712563478'  %>
+<%= f.select :school, User::SCHOOL, {prompt:'Choose your school'}   %>
+<%= f.label :password%>
+<%= f.password_field :password, placeholder: '******'  %>
+<%= f.label :password_confirmation%>
+<%= f.password_field :password_confirmation, placeholder: '******'  %>
