--- a/app/views/lecturers/new.html.erb
+++ b/app/views/lecturers/new.html.erb
@@ -1,17 +1,25 @@
-<h1> Sign up here!!</h1>
+<h1> Lecturer Sign up Form</h1>
+<hr>
 <div class="row">
     <div class="medium-8 columns">
         <div class="medium-offset-5">
             <%= form_for(@lecturer) do |f| %>
                 <%= render 'shared/errors', object: f.object %>
-                <%= f.text_field :id_no, placeholder: 'Id number'  %>
-                <%= f.text_field :f_name, placeholder:'First Name'  %>
-                <%= f.text_field :l_name, placeholder: 'Last Name' %>
-                <%= f.text_field :email,  placeholder: 'Email'  %>
-                <%= f.text_field :phone,  placeholder: 'Phone'  %>
-                <%= f.text_field :school, placeholder: 'School'  %>
-                <%= f.password_field :password, placeholder: 'Password'  %>
-                <%= f.password_field :password_confirmation, placeholder: 'Confirm Password'%>
+                <%= f.label :identity_no %>
+                <%= f.text_field :id_no, placeholder: '28998613'  %>
+                <%= f.label :first_name%>
+                <%= f.text_field :f_name, placeholder:'John'  %>
+                <%= f.label :last_name%>
+                <%= f.text_field :l_name, placeholder: 'Doe' %>
+                <%= f.label :email%>
+                <%= f.text_field :email,  placeholder: 'johndoe@yahoo.com'  %>
+                <%= f.label :phone%>
+                <%= f.text_field :phone,  placeholder: '0700234567'  %>
+                <%= f.select :school, User::SCHOOL, {prompt:'Choose your school'}   %>
+                <%= f.label :password%>
+                <%= f.password_field :password, placeholder: '******'  %>
+                <%= f.label :password_confirmation%>
+                <%= f.password_field :password_confirmation, placeholder: '*******' %>
                 <%= f.submit "Sign Up", class: "button" %>
             <% end %>
         </div>
