--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,4 @@
-<h1> Sign up here!!</h1>
+<h1> Student sign up here!!</h1>
 <div class="row">
     <div class="medium-8 columns">
         <div class="medium-offset-5">
