--- a/app/views/questions/new.html.erb
+++ b/app/views/questions/new.html.erb
@@ -1,2 +1,12 @@
-<h1>Questions#new</h1>
-<p>Find me in app/views/questions/new.html.erb</p>
+<h1>Ask</h1>
+<hr>
+<%= form_for(@question) do |f| %>
+    <%= f.label :title %>
+    <%= f.text_field :title %>
+    <%= f.label :body %>
+    <%= f.text_area :body, placeholder: "Enter your question here ..." %>
+    <%= f.label :category %>
+    <%= f.label :tag %>
+    <%= f.text_field :tag, placeholder: "Enter tags here separated by commas" %>
+    <%= f.submit "Post Your Question" ,class: "button"%>
+<% end %>
