--- a/app/views/questions/new.html.erb
+++ b/app/views/questions/new.html.erb
@@ -6,6 +6,7 @@
     <%= f.label :body %>
     <%= f.text_area :body, placeholder: "Enter your question here ..." %>
     <%= f.label :category %>
+    <%= f.select :category, Question::CAT, {prompt:"Select Category of your question"}%>
     <%= f.label :tag %>
     <%= f.text_field :tag, placeholder: "Enter tags here separated by commas" %>
     <%= f.submit "Post Your Question" ,class: "button"%>
