--- a/app/views/questions/new.html.erb
+++ b/app/views/questions/new.html.erb
@@ -1,13 +1,25 @@
-<h1>Ask</h1>
+<h1<div data-sticky-container>
+        <div class="title-bar" data-sticky data-options="marginTop:0;" style="width:100%">
+            <div class="title-bar-left"><%= link_to "Questions",questions_path %></div>
+            <div class="title-bar-right"><%= link_to "Tags", "#" %>  &nbsp; &nbsp; &nbsp; &nbsp;
+                <%= link_to "Ask", new_question_path %> </div>
+        </div>
+    </div>
+    <h1 >Ask</h1>
 <hr>
-<%= form_for(@question) do |f| %>
-    <%= f.label :title %>
-    <%= f.text_field :title %>
-    <%= f.label :body %>
-    <%= f.text_area :body, placeholder: "Enter your question here ..." %>
-    <%= f.label :category %>
-    <%= f.select :category, Question::CAT, {prompt:"Select Category of your question"}%>
-    <%= f.label :tag %>
-    <%= f.text_field :tag, placeholder: "Enter tags here separated by commas" %>
-    <%= f.submit "Post Your Question" ,class: "button"%>
-<% end %>
+<div class="row">
+    <div class= "medium-6">
+        <%= form_for(@question) do |f| %>
+            <%= render 'shared/errors', object: f.object %>
+            <%= f.label :title %>
+            <%= f.text_field :title %>
+            <%= f.label :body %>
+            <%= f.text_area :body, placeholder: "Enter your question here ..." %>
+            <%= f.label :category %>
+            <%= f.select :category, Question::CAT, {prompt:"Select Category of your question"}%>
+            <%= f.label :tag %>
+            <%= f.text_field :tag, placeholder: "Enter tags here separated by commas" %>
+            <%= f.submit "Post Your Question" ,class: "button"%>
+        <% end %>
+    </div>
+</div>
