--- a/app/views/questions/new.html.erb
+++ b/app/views/questions/new.html.erb
@@ -14,7 +14,8 @@
             <%= f.label :title %>
             <%= f.text_field :title %>
             <%= f.label :body %>
-            <%= f.text_area :body, placeholder: "Enter your question here ..." %>
+            <%= f.text_area :body, placeholder: "Enter your question here ...", cols:"100", rows: "10" %>
+
             <%= f.label :category %>
             <%= f.select :category, Question::CAT, {prompt:"Select Category of your question"}%>
             <%= f.label :tag %>
