linking a question in the stack to its path

--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -7,4 +7,10 @@
     </div>
 </div>
 <h1> Stack </h1>
+    <ol>
+<% @questions.each do |quiz| %>
+        <li> <%= link_to quiz.body, question_path(id: quiz.id) %></li>
+        <br>
+    <% end %>
+        </ol>
 <hr>
