--- a/app/views/lecturers/show.html.erb
+++ b/app/views/lecturers/show.html.erb
@@ -18,4 +18,7 @@
         <td> <%= @lecturer.school %></td></tr>
 
 </table>
-<p align='center'><%= link_to 'Edit Profile', edit_lecturer_path, class:"button" %></p> 
+<br>
+<p align='center'><%= link_to 'Edit Profile', edit_lecturer_path, class:"button" %>
+<%= link_to 'New Assignment', new_assignment_path, class:"button" %>
+</p>
