--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,6 +23,6 @@
         <% end %>
         <%= yield %>
         <%= render 'layouts/footer' %>
-
+        <%= debug(params) if Rails.env.development? %>
     </body>
 </html>
