--- a/app/views/logins/new.html.erb
+++ b/app/views/logins/new.html.erb
@@ -1,2 +1,14 @@
-<h1>Logins#new</h1>
-<p>Find me in app/views/logins/new.html.erb</p>
+<h1>Log In</h1>
+<div class="row">
+    <div class="medium-6 offest-3 columns">
+<%= form_for(:login,url: signin_path) do |f| %>
+    <%= f.label :email %>
+    <%= f.text_field :email,  placeholder: 'Email'  %>
+    <%= f.label :password %>
+    <%= f.password_field :password, placeholder: 'Password'  %>
+    <%= f.submit "Login", class:"button" %>
+<% end %>
+<p> New here?? <%= link_to "Sign up", new_lecturer_path %>
+</div>
+</div>
+ 
