--- a/app/views/layouts/_nav-bar.html.erb
+++ b/app/views/layouts/_nav-bar.html.erb
@@ -7,7 +7,7 @@
     <% elsif signed_in? %>
         <h5><%= link_to "Signout", signout_path, method: :delete %></h5>
         <% else %>
-        <h5><%= link_to "Login", login_path %></h5>
+        <h5><%= link_to "Login", log_in_path %></h5>
         <% end %>
     </div>
     <div class="top-bar-left">
