--- a/app/views/assignments/new.html.erb
+++ b/app/views/assignments/new.html.erb
@@ -5,10 +5,10 @@
             <%= render 'shared/errors', object: f.object %>
             <%= f.label :unit_code%>
             <%= f.text_field :unit_code%>
-            <%= f.label :unit_name %>
-            <%= f.text_field :unit_name%>
-            <%= f.label :assignment %>
+            <%= f.label :Description %>
             <%= f.text_area :title%>
+            <%= f.label :attach_file %>
+            <%= f.file_field :attachment%>
             <%= f.label :due_date%>
             <%= date_select(:assignment, :due_date, { :default => @the_date, :include_blank=> @the_date.nil?  })%>
 
