refactoring footer and top-bar

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -4,7 +4,7 @@
         shahada@customercare.com</p>
         <p class="text-center"> +254797165      |     +254711498<br>
 
-        or Visit us at at the Great Wall near your way to hell
+        or Visit us at at the Great Wall near Eastern Block 
 
         </p>
         <p class="text-center">A web-based application for signing up
