link for assignment show

--- a/app/views/lecturers/show.html.erb
+++ b/app/views/lecturers/show.html.erb
@@ -21,7 +21,7 @@
 <br>
 <h4> Assignments </h4>
 <% @assignments.each do |assignment| %>
-<li>   <%= assignment. title %></li>
+    <li>  <%=link_to (assignment.title),assignment_path(id: assignment.id) %></li>
 <% end %>
 <p align='center'><%= link_to 'Edit Profile', edit_lecturer_path, class:"button" %>
 <%= link_to 'New Assignment', new_assignment_path, class:"button" %>
