edit and update assignment

--- a/app/views/assignments/show.html.erb
+++ b/app/views/assignments/show.html.erb
@@ -1,5 +1,5 @@
 <h1><%= @assignment.title %></h1>
- &nbsp; &nbsp;&nbsp;&nbsp; <%= link_to "Edit", "#", class:"button"%>
+ &nbsp; &nbsp;&nbsp;&nbsp; <%= link_to "Edit", edit_assignment_path,  class:"button"%>
 <%= link_to "Delete", "#", class: "button" %>
 <table>
     <tr>
