delete assignment resources

--- a/app/views/assignments/show.html.erb
+++ b/app/views/assignments/show.html.erb
@@ -1,6 +1,6 @@
 <h1><%= @assignment.title %></h1>
  &nbsp; &nbsp;&nbsp;&nbsp; <%= link_to "Edit", edit_assignment_path,  class:"button"%>
-<%= link_to "Delete", "#", class: "button" %>
+<%= link_to "Delete",(@assignment), method: :delete,data:{confirm: "Sure you want to delete assignment?"}, class: "button" %>
 <table>
     <tr>
         <th>Unit code </th>
