--- a/app/assets/stylesheets/custom.scss.css
+++ b/app/assets/stylesheets/custom.scss.css
@@ -19,6 +19,10 @@
 
    background-color:green; 
 }
+
+#flash.info{
+    background-color:cyan; 
+}
 h2,h5{
     display:inline;
     position:center;
