--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,6 +14,7 @@
  *= require_self
  *= require foundation_and_overrides
  *= require animate
+ *= require font-awesome
  *= require simple_calendar
 
  */
