home page alignment

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -18,6 +18,8 @@
 
  */
 @import "semantic-ui";
+@import "semantic-ui/collections/menu";
+
 // @import "semantic-ui/collections/men";
 // @import "~semantic-ui-sass/semantic-ui.scss";
  body{
