--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,82 +1,102 @@
-<div class="row">
-    <div class="medium-6 columns">
-    <%= image_tag('girl.png')%>
+<br> <br> <br>
+<div class="ui grid">
+    <div class="two wide column">
     </div>
-    <div class="medium-6 columns">
-        <%# <div class="animated fadeInUp"> %>
-            <div class="animated slideInRight">
-        <p>
-        <br>
-        If you have ever been a student at any time in your life, I bet  you must have had a moment where
-        you thought "if only i knew there was no class today" or did i hear the representative  say anything the
-        assignment? now am late with it. Definately you must have had one of those days when you are
-        totally into learning a subject(we both know how rare it is to get into a mood like that) and in between your 
-        studies you find a concept you cannot seem to grasp and you have to understand that concept before you move 
-        on to another concept. You try the internet but what you get is a junk of information some talking of 
-        a very different thing from the other and you do not know which is which. The time you wish you could 
-        have a direct channel to communicate to the lecturer to make things clear for you
-        or even ask a question you did not understand before the next class. Or sometimes just ask something
-        so a lecturer or a fellow student can answer and maybe get different opinions.<br>
-        <i>Shahada is to all those times, the times you thought about how the communication channel for learning
-            in the school after classtime is broken.</i>
-        </p>
+    <div class="six wide column">
+        <%= image_tag('girl.png', width: "700", height: "500")%>
     </div>
+        <div class="one wide column">
+        </div>
+    <div class="five wide column">
+        <div class="animated slideInRight">
+            <p id="desc">
+            If you have ever been a student at any time in your life, I bet  you must have had a moment where
+            you thought "if only i knew there was no class today" or did i hear the representative  say anything the
+            assignment? now am late with it. Definately you must have had one of those days when you are
+            totally into learning a subject(we both know how rare it is to get into a mood like that) and in between your 
+            studies you find a concept you cannot seem to grasp and you have to understand that concept before you move 
+            on to another concept. You try the internet but what you get is a junk of information some talking of 
+            a very different thing from the other and you do not know which is which. The time you wish you could 
+            have a direct channel to communicate to the lecturer to make things clear for you
+            or even ask a question you did not understand before the next class. Or sometimes just ask something
+            so a lecturer or a fellow student can answer and maybe get different opinions.<br>
+            <i>Shahada is to all those times, the times you thought about how the communication channel for learning
+                in the school after classtime is broken.</i>
+            </p>
+        </div>
+        <div class="two wide column">
+        </div>
     </div>
-    </div>
-    <div class="medium-offset-4">
+</div>
+<br> <br> <br>
+    <div class="ui grid">
+        <div class="six wide column"> </div>
+        <div class="four wide column">
         <% unless logged_in? %>
-    <%=link_to "Sign up as Student", new_user_path , class:"button success round"%> &nbsp; &nbsp; &nbsp;
-    <%=link_to "Sign up as Lecturer", lecturers_new_path , class:"button"%>
+    <%=link_to "Sign up as Student", new_user_path , class:"ui blue button"%> &nbsp; &nbsp; &nbsp;
+        </div>
+        <div class="five wide column">
+    <%=link_to "Sign up as Lecturer", lecturers_new_path , class:"ui green button"%>
+        </div>
     <% end %>
     </div>
     <h1 id="about">About us</h1>
     <hr>
-    <div class="row">
-        <div class="medium-4 columns" >
+    <br> <br> <br>
+<div class="ui three column grid">
+    <div class="center aligned row">
+        <div class="column" >
             <div class="medium-offset-4" ><%= image_tag("people.png") %></div>
         </div>
-        <div class="medium-4 columns">
+        <div class="column">
             <div class="medium-offset-4" ><%= image_tag("browser.png") %></div>
         </div>
-        <div class="medium-4 columns">
+        <div class="column">
             <div class="medium-offset-4" ><%= image_tag("computer-1.png") %></div>
         </div>
     </div>
+    </div>
     <br>
-    <div class="row">
-        <div class="medium-4 columns">
-        <%# <h3>Motivation</h3> %>
-        <p>
-        The current communication between the students and the lecturers in
-        the department is during lectures
-        and also no room for feedback. The other communication through the class
-        representative which is he/she is not available is a disaster.
-        And also the message from the class
-        representative may not reach each and every member of the class in time.
-        </p>
-    </div>
-    <div class="medium-4 columns">
-        <%# <h3>SO??</h3> %>
-        <p>
-        Shahada aims at solving the communication between the student
-        and the teacher. In doing this the
-        classroom gets adequate learning, assignments are
-        admitted in time, students can ask questions anytime
-        and the maximum is gotten from the unit of interest.
-        In simple terms To improve the teaching mechanism in the department
-        to ensure all the objectives of the unit are delivered as expected.
-        </p>
-    </div>
-    <div class="medium-4 columns">
-        <%# <h3>How? </h3> %>
-        <p> We provide a communication channel between the students and lecturers 
-        where a student can ask a question and lecturer or a fellow classmate can answer. 
-        The lecturer can also post an assignment in the website and any student in the 
-        that year of study can see it. A lecturer can post concerns, food for thought and 
-        pretty much anything and the students can comment on the same
-        </p>
+    <div class="ui three column grid">
+        <div class="row">
+            <div class="one wide column"> </div>
+                <div class="four wide column">
+                <%# <h3>Motivation</h3> %>
+                <p id="desc">
+                The current communication between the students and the lecturers in
+                the department is during lectures
+                and also no room for feedback. The other communication through the class
+                representative which is he/she is not available is a disaster.
+                And also the message from the class
+                representative may not reach each and every member of the class in time.
+                </p>
+            </div>
+            <div class="one wide column"> </div>
+                <div class="four wide column">
+                <%# <h3>SO??</h3> %>
+                <p id="desc">
+                Shahada aims at solving the communication between the student
+                and the teacher. In doing this the
+                classroom gets adequate learning, assignments are
+                admitted in time, students can ask questions anytime
+                and the maximum is gotten from the unit of interest.
+                In simple terms To improve the teaching mechanism in the department
+                to ensure all the objectives of the unit are delivered as expected.
+                </p>
+            </div>
+            <div class="one wide column"> </div>
+                <div class="four wide column">
+                <%# <h3>How? </h3> %>
+                <p id="desc">
+                We provide a communication channel between the students and lecturers 
+                where a student can ask a question and lecturer or a fellow classmate can answer. 
+                The lecturer can also post an assignment in the website and any student in the 
+                that year of study can see it. A lecturer can post concerns, food for thought and 
+                pretty much anything and the students can comment on the same
+                </p>
+            </div>
         </div>
-</div>
+    </div>
 
 <% cache 'word_of_the_hour', expires_in: Time.now.beginning_of_hour + 2.seconds do %>
     <%= %W(happy developer starts to hack in reddis).sample %>
