--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,39 +1,51 @@
 <div id="footer">
-    <div class="row">
-        <p class="email">
-        shahada@customercare.com</p>
-        <p class="text-center"> +254797165      |     +254711498<br>
+    <div class="ui equal width center aligned padded grid">
+        <div class="row">
+            <div class="column">
+                <p class="email">
+                shahada@customercare.com</p>
+                <p class="text-center"> +254797165      |     +254711498<br>
 
-        or Visit us at at the Great Wall near Eastern Block 
+                or Visit us at at the Great Wall near Eastern Block 
 
-        </p>
-        <p class="text-center">A web-based application for signing up
-        students and lecturers
-        where they can post their concern and communicate efficiently 
-        </p>
+                </p>
+                <p class="text-center">A web-based application for signing up
+                students and lecturers
+                where they can post their concern and communicate efficiently 
+                </p>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="column">
+                <div class="icons">
+                    <p class=text-center>
+                    <span class="fa-stack fa-lg">
+                        <%= link_to "https://www.facebook.com" , target:"blank" do %>
+                            <i class="fa fa-square-o fa-stack-2x"></i>
+                            <i class="fa fa-facebook fa-stack-1x"></i><% end %>
+            </span>
+            <span class="fa-stack fa-lg">
+                <%= link_to "https://www.twitter.com", target:"blank" do %>
+                    <i class="fa fa-square-o fa-stack-2x"></i>
+                    <i class="fa fa-twitter fa-stack-1x"></i>
+                <% end %>
+            </span>
+            <span class="fa-stack fa-lg">
+                <%= link_to "https://www.instagram.com", target: "blank" do %>
+                    <i class="fa fa-instagram fa-stack-2x"></i>
+                <% end %>
+            </span>
+                    </p>
+                </div>
+                <hr>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="column">
+                <p class="text-center"> &copy;  Shahada <%= Date.today.year%></p>
+            </div>
+        </div>
     </div>
-    <div class="icons">
-        <p class=text-center>
-        <span class="fa-stack fa-lg">
-            <%= link_to "https://www.facebook.com" , target:"blank" do %>
-                <i class="fa fa-square-o fa-stack-2x"></i>
-                <i class="fa fa-facebook fa-stack-1x"></i><% end %>
-</span>
-<span class="fa-stack fa-lg">
-    <%= link_to "https://www.twitter.com", target:"blank" do %>
-        <i class="fa fa-square-o fa-stack-2x"></i>
-        <i class="fa fa-twitter fa-stack-1x"></i>
-    <% end %>
-</span>
-<span class="fa-stack fa-lg">
-    <%= link_to "https://www.instagram.com", target: "blank" do %>
-        <i class="fa fa-instagram fa-stack-2x"></i>
-    <% end %>
-</span>
-        </p>
-    </div>
-    <hr>
-
-    <p class="text-center"> &copy;  Shahada <%= Date.today.year%></p>
-</div>
 </div>
